Implement /api/library
